# mc-maps

./: .gitignore  README.md  config.json  full_regen.py  generate  index.html  mapsettings.json  pyproject.toml  update_markers.py
