[tool.poetry]
name = "mc-maps"
version = "0.1.0"
description = "Generates a simple website for browsing a Minecraft map"
authors = ["Zachary Westerman <westerman.zachary@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
